--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HCMUAF Schedule Exporter</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <!-- <link rel="stylesheet" type="text/css" href="./styles.css"> -->
+  <style>
+    .container {
+      max-width: 800px;
+    }
+
+    .step {
+      display: none;
+    }
+
+    .step.active {
+      display: block;
+    }
+
+    .loading {
+      display: none;
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    .spinner-border {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    .btn-google {
+      background-color: #4285F4;
+      color: white;
+    }
+
+    .btn-google:hover {
+      background-color: #357ae8;
+      color: white;
+    }
+
+    .action-buttons {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .instructions-panel {
+      background-color: #f8f9fa;
+      border: 1px solid #dee2e6;
+      border-radius: 0.375rem;
+      padding: 1rem;
+      margin-top: 1rem;
+      display: none;
+    }
+
+    .instructions-list {
+      padding-left: 1.5rem;
+    }
+
+    .instructions-list li {
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
 
 <body>
@@ -108,8 +165,6 @@
     const loading = document.getElementById('loading');
     const loadingText = document.getElementById('loadingText');
     const errorEl = document.getElementById('error');
-    const baseUrl = `${window.location.protocol}//${window.location.host}`;
-    // console.log(baseUrl)
     // Helper functions
     function showStep(step) {
       // Hide all steps
@@ -142,7 +197,7 @@
       showLoading('Đang tìm kiếm các học kỳ có sẵn...');
 
       try {
-        const response = await fetch(`${baseUrl}/api/fetch-semesters`, {
+        const response = await fetch('/api/fetch-semesters', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -288,7 +343,7 @@
 
       // Open the calendar creation page
       window.open(importUrl, '_blank');
-      
+
       // Show instructions to user
       // alert('To import your schedule:\n\n1. Create a new calendar named "Schedule" on the page that opened\n2. After creating, click on "Import & Export" on the left menu\n3. Click "Select file from your computer" and choose the ICS file you downloaded\n4. Select your "Schedule" calendar from the dropdown\n5. Click Import');
     }
@@ -309,7 +364,7 @@
       showLoading('Đang đăng nhập...');
 
       try {
-        const response = await fetch(`${baseUrl}/api/login`, {
+        const response = await fetch('/api/login', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -348,7 +403,7 @@
       showLoading('Đang lấy tkb...');
 
       try {
-        const response = await fetch(`${baseUrl}/api/fetch-schedule`, {
+        const response = await fetch('/api/fetch-schedule', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -385,7 +440,7 @@
       showLoading('Đang tạo tập tin lịch...');
 
       try {
-        const response = await fetch(`${baseUrl}/api/generate-ics`, {
+        const response = await fetch('/api/generate-ics', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -431,7 +486,7 @@
 
       try {
         // First, get the ICS content
-        const response = await fetch(`${baseUrl}/api/generate-ics`, {
+        const response = await fetch('/api/generate-ics', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
