fix time of each periods

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
 
     <p style="color: black; margin-top: 30px; font-size: 1em;">
         "Liên lạc gì cũng được, trừ gọi điện lúc 2h sáng 😴<br>
-        Email: 24166094@st.hcmuaf.edu.vn (không nhận spam 🚫🍖)"
+        Email: 24166094@st.hcmuaf.edu.vn (không nhận spam 🚫)"
     </p>
 </footer>
 
