fix login from origin api web dkmh

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HCMUAF Schedule Exporter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./styles.css"> <!-- Link to CSS file -->
+
 </head>
+
 <body>
     <div class="container mt-5">
         <h1 class="text-center mb-4">Chuyển TKB từ trang đkmh sang Google Calendar</h1>
@@ -14,19 +17,56 @@
             <div class="card-body">
                 <!-- Step 1: Login Form -->
                 <div id="step1" class="step active">
-                    <h3>Bước 1: Đăng nhập</h3>
-                    <form id="loginForm">
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Mã số sinh viên</label>
-                            <input type="text" class="form-control" id="username" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Mật khẩu</label>
-                            <input type="password" class="form-control" id="password" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Đăng nhập</button>
+                    <h2>Bước 1: Lấy Access Token</h2>
+                    <div id="deviceInstructions"></div>
+                    <form id="manualTokenForm" class="mt-3">
+                        <label for="accessTokenInput">Dán Access Token của bạn vào đây:</label>
+                        <input type="text" id="accessTokenInput" placeholder="Dán access_token vào đây..." required>
+                        <button type="submit" class="btn">Tiếp tục</button>
                     </form>
                 </div>
+                <script>
+                    // Detect device type and show instructions
+                    function isMobile() {
+                        return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+                    }
+                    const deviceInstructions = document.getElementById('deviceInstructions');
+                    if (isMobile()) {
+                        deviceInstructions.innerHTML = `
+            <h3>Hướng dẫn cho điện thoại</h3>
+            <ol>
+                <li>Truy cập <a href="https://dkmh.hcmuaf.edu.vn/" target="_blank">dkmh.hcmuaf.edu.vn</a> và đăng nhập.</li>
+                <li>Tạo bookmark mới trên trình duyệt, đặt tên (ví dụ: "AT").</li>
+                <li>Dán đoạn mã sau vào phần URL của bookmark:
+                    <pre><code>javascript:(function(){
+    var s=document.createElement('script');
+    s.src='https://cdn.jsdelivr.net/npm/eruda';
+    s.onload=function(){eruda.init()};
+    document.body.appendChild(s);
+})();</code></pre>
+                </li>
+                <li>Lưu bookmark, sau đó mở lại <a href="https://dkmh.hcmuaf.edu.vn/" target="_blank">dkmh.hcmuaf.edu.vn</a> và đăng nhập.</li>
+                <li>Chạy bookmark "AT" vừa tạo, nhấn vào biểu tượng răng cưa ở góc phải.</li>
+                <li>Dán đoạn mã sau vào console:
+                    <pre><code>JSON.parse(sessionStorage.getItem('CURRENT_USER')).access_token</code></pre>
+                </li>
+                <li>Copy access_token hiện ra và dán vào ô bên dưới.</li>
+            </ol>
+        `;
+                    } else {
+                        deviceInstructions.innerHTML = `
+            <h3>Hướng dẫn cho máy tính/laptop</h3>
+            <ol>
+                <li>Mở <a href="https://dkmh.hcmuaf.edu.vn/" target="_blank">dkmh.hcmuaf.edu.vn</a> và đăng nhập.</li>
+                <li>Nhấn <code>F12</code> hoặc chuột phải chọn "Inspect" &rarr; "Console".</li>
+                <li>Dán lệnh sau vào console và nhấn Enter:
+                    <pre><code>JSON.parse(sessionStorage.getItem('CURRENT_USER')).access_token</code></pre>
+                </li>
+                <li>Copy access_token hiện ra và dán vào ô bên dưới.</li>
+            </ol>
+        `;
+                    }
+                </script>
 
                 <!-- Step 2: Choose exam & semester schedule  -->
                 <div id="step2" class="step">
@@ -122,48 +162,57 @@
     <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-bottom: 20px;">
         <!-- Facebook -->
         <a href="https://www.facebook.com/minhtanz1" target="_blank" style="text-decoration: none; position: relative;"
-           onmouseover="this.querySelector('.fb-joke').style.display='block'"
-           onmouseout="this.querySelector('.fb-joke').style.display='none'">
+            onmouseover="this.querySelector('.fb-joke').style.display='block'"
+            onmouseout="this.querySelector('.fb-joke').style.display='none'">
             <svg style="width: 2em; height: 2em; color: #0866FF;" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M9.101 23.691v-7.98H6.627v-3.667h2.474v-1.58c0-4.085 1.848-5.978 5.858-5.978.401 0 .955.042 1.468.103a8.68 8.68 0 0 1 1.141.195v3.325a8.623 8.623 0 0 0-.653-.036 26.805 26.805 0 0 0-.733-.009c-.707 0-1.259.096-1.675.309a1.686 1.686 0 0 0-.679.622c-.258.42-.374.995-.374 1.752v1.297h3.919l-.386 2.103-.287 1.564h-3.246v8.245C19.396 23.238 24 18.179 24 12.044c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.628 3.874 10.35 9.101 11.647Z"/>
+                <path fill="currentColor"
+                    d="M9.101 23.691v-7.98H6.627v-3.667h2.474v-1.58c0-4.085 1.848-5.978 5.858-5.978.401 0 .955.042 1.468.103a8.68 8.68 0 0 1 1.141.195v3.325a8.623 8.623 0 0 0-.653-.036 26.805 26.805 0 0 0-.733-.009c-.707 0-1.259.096-1.675.309a1.686 1.686 0 0 0-.679.622c-.258.42-.374.995-.374 1.752v1.297h3.919l-.386 2.103-.287 1.564h-3.246v8.245C19.396 23.238 24 18.179 24 12.044c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.628 3.874 10.35 9.101 11.647Z" />
             </svg>
-            <span class="fb-joke" style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
+            <span class="fb-joke"
+                style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
                 Stalk tôi ở đây nhé 😜
             </span>
         </a>
 
         <!-- Reddit -->
-        <a href="https://www.reddit.com/user/master_minh_tan/" target="_blank" style="text-decoration: none; position: relative;"
-           onmouseover="this.querySelector('.reddit-joke').style.display='block'"
-           onmouseout="this.querySelector('.reddit-joke').style.display='none'">
+        <a href="https://www.reddit.com/user/master_minh_tan/" target="_blank"
+            style="text-decoration: none; position: relative;"
+            onmouseover="this.querySelector('.reddit-joke').style.display='block'"
+            onmouseout="this.querySelector('.reddit-joke').style.display='none'">
             <svg style="width: 2em; height: 2em; color: #FF4500;" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M12 0C5.373 0 0 5.373 0 12c0 3.314 1.343 6.314 3.515 8.485l-2.286 2.286C.775 23.225 1.097 24 1.738 24H12c6.627 0 12-5.373 12-12S18.627 0 12 0Zm4.388 3.199c1.104 0 1.999.895 1.999 1.999 0 1.105-.895 2-1.999 2-.946 0-1.739-.657-1.947-1.539v.002c-1.147.162-2.032 1.15-2.032 2.341v.007c1.776.067 3.4.567 4.686 1.363.473-.363 1.064-.58 1.707-.58 1.547 0 2.802 1.254 2.802 2.802 0 1.117-.655 2.081-1.601 2.531-.088 3.256-3.637 5.876-7.997 5.876-4.361 0-7.905-2.617-7.998-5.87-.954-.447-1.614-1.415-1.614-2.538 0-1.548 1.255-2.802 2.803-2.802.645 0 1.239.218 1.712.585 1.275-.79 2.881-1.291 4.64-1.365v-.01c0-1.663 1.263-3.034 2.88-3.207.188-.911.993-1.595 1.959-1.595Zm-8.085 8.376c-.784 0-1.459.78-1.506 1.797-.047 1.016.64 1.429 1.426 1.429.786 0 1.371-.369 1.418-1.385.047-1.017-.553-1.841-1.338-1.841Zm7.406 0c-.786 0-1.385.824-1.338 1.841.047 1.017.634 1.385 1.418 1.385.785 0 1.473-.413 1.426-1.429-.046-1.017-.721-1.797-1.506-1.797Zm-3.703 4.013c-.974 0-1.907.048-2.77.135-.147.015-.241.168-.183.305.483 1.154 1.622 1.964 2.953 1.964 1.33 0 2.47-.81 2.953-1.964.057-.137-.037-.29-.184-.305-.863-.087-1.795-.135-2.769-.135Z"/>
+                <path fill="currentColor"
+                    d="M12 0C5.373 0 0 5.373 0 12c0 3.314 1.343 6.314 3.515 8.485l-2.286 2.286C.775 23.225 1.097 24 1.738 24H12c6.627 0 12-5.373 12-12S18.627 0 12 0Zm4.388 3.199c1.104 0 1.999.895 1.999 1.999 0 1.105-.895 2-1.999 2-.946 0-1.739-.657-1.947-1.539v.002c-1.147.162-2.032 1.15-2.032 2.341v.007c1.776.067 3.4.567 4.686 1.363.473-.363 1.064-.58 1.707-.58 1.547 0 2.802 1.254 2.802 2.802 0 1.117-.655 2.081-1.601 2.531-.088 3.256-3.637 5.876-7.997 5.876-4.361 0-7.905-2.617-7.998-5.87-.954-.447-1.614-1.415-1.614-2.538 0-1.548 1.255-2.802 2.803-2.802.645 0 1.239.218 1.712.585 1.275-.79 2.881-1.291 4.64-1.365v-.01c0-1.663 1.263-3.034 2.88-3.207.188-.911.993-1.595 1.959-1.595Zm-8.085 8.376c-.784 0-1.459.78-1.506 1.797-.047 1.016.64 1.429 1.426 1.429.786 0 1.371-.369 1.418-1.385.047-1.017-.553-1.841-1.338-1.841Zm7.406 0c-.786 0-1.385.824-1.338 1.841.047 1.017.634 1.385 1.418 1.385.785 0 1.473-.413 1.426-1.429-.046-1.017-.721-1.797-1.506-1.797Zm-3.703 4.013c-.974 0-1.907.048-2.77.135-.147.015-.241.168-.183.305.483 1.154 1.622 1.964 2.953 1.964 1.33 0 2.47-.81 2.953-1.964.057-.137-.037-.29-.184-.305-.863-.087-1.795-.135-2.769-.135Z" />
             </svg>
-            <span class="reddit-joke" style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
+            <span class="reddit-joke"
+                style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
                 Lair của Meme Lord 🐸
             </span>
         </a>
 
         <!-- Threads -->
         <a href="https://www.threads.net/@minhtanz1" target="_blank" style="text-decoration: none; position: relative;"
-           onmouseover="this.querySelector('.thread-joke').style.display='block'"
-           onmouseout="this.querySelector('.thread-joke').style.display='none'">
+            onmouseover="this.querySelector('.thread-joke').style.display='block'"
+            onmouseout="this.querySelector('.thread-joke').style.display='none'">
             <svg style="width: 2em; height: 2em; color: #000000;" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.017c.03-3.579.879-6.43 2.525-8.482C5.845 1.205 8.6.024 12.18 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.304-6.015-2.91.022-5.11.936-6.54 2.717C4.307 6.504 3.616 8.914 3.589 12c.027 3.086.718 5.496 2.057 7.164 1.43 1.783 3.631 2.698 6.54 2.717 2.623-.02 4.358-.631 5.8-2.045 1.647-1.613 1.618-3.593 1.09-4.798-.31-.71-.873-1.3-1.634-1.75-.192 1.352-.622 2.446-1.284 3.272-.886 1.102-2.14 1.704-3.73 1.79-1.202.065-2.361-.218-3.259-.801-1.063-.689-1.685-1.74-1.752-2.964-.065-1.19.408-2.285 1.33-3.082.88-.76 2.119-1.207 3.583-1.291a13.853 13.853 0 0 1 3.02.142c-.126-.742-.375-1.332-.75-1.757-.513-.586-1.308-.883-2.359-.89h-.029c-.844 0-1.992.232-2.721 1.32L7.734 7.847c.98-1.454 2.568-2.256 4.478-2.256h.044c3.194.02 5.097 1.975 5.287 5.388.108.046.216.094.321.142 1.49.7 2.58 1.761 3.154 3.07.797 1.82.871 4.79-1.548 7.158-1.85 1.81-4.094 2.628-7.277 2.65Zm1.003-11.69c-.242 0-.487.007-.739.021-1.836.103-2.98.946-2.916 2.143.067 1.256 1.452 1.839 2.784 1.767 1.224-.065 2.818-.543 3.086-3.71a10.5 10.5 0 0 0-2.215-.221z"/>
+                <path fill="currentColor"
+                    d="M12.186 24h-.007c-3.581-.024-6.334-1.205-8.184-3.509C2.35 18.44 1.5 15.586 1.472 12.01v-.017c.03-3.579.879-6.43 2.525-8.482C5.845 1.205 8.6.024 12.18 0h.014c2.746.02 5.043.725 6.826 2.098 1.677 1.29 2.858 3.13 3.509 5.467l-2.04.569c-1.104-3.96-3.898-5.984-8.304-6.015-2.91.022-5.11.936-6.54 2.717C4.307 6.504 3.616 8.914 3.589 12c.027 3.086.718 5.496 2.057 7.164 1.43 1.783 3.631 2.698 6.54 2.717 2.623-.02 4.358-.631 5.8-2.045 1.647-1.613 1.618-3.593 1.09-4.798-.31-.71-.873-1.3-1.634-1.75-.192 1.352-.622 2.446-1.284 3.272-.886 1.102-2.14 1.704-3.73 1.79-1.202.065-2.361-.218-3.259-.801-1.063-.689-1.685-1.74-1.752-2.964-.065-1.19.408-2.285 1.33-3.082.88-.76 2.119-1.207 3.583-1.291a13.853 13.853 0 0 1 3.02.142c-.126-.742-.375-1.332-.75-1.757-.513-.586-1.308-.883-2.359-.89h-.029c-.844 0-1.992.232-2.721 1.32L7.734 7.847c.98-1.454 2.568-2.256 4.478-2.256h.044c3.194.02 5.097 1.975 5.287 5.388.108.046.216.094.321.142 1.49.7 2.58 1.761 3.154 3.07.797 1.82.871 4.79-1.548 7.158-1.85 1.81-4.094 2.628-7.277 2.65Zm1.003-11.69c-.242 0-.487.007-.739.021-1.836.103-2.98.946-2.916 2.143.067 1.256 1.452 1.839 2.784 1.767 1.224-.065 2.818-.543 3.086-3.71a10.5 10.5 0 0 0-2.215-.221z" />
             </svg>
-            <span class="thread-joke" style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
+            <span class="thread-joke"
+                style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
                 Chữ ít drama nhiều 🧵
             </span>
         </a>
 
         <!-- Email -->
         <a href="mailto:24166094@st.hcmuaf.edu.vn" style="text-decoration: none; position: relative;"
-           onmouseover="this.querySelector('.email-joke').style.display='block'"
-           onmouseout="this.querySelector('.email-joke').style.display='none'">
+            onmouseover="this.querySelector('.email-joke').style.display='block'"
+            onmouseout="this.querySelector('.email-joke').style.display='none'">
             <svg style="width: 2em; height: 2em; color: #EA4335;" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z"/>
+                <path fill="currentColor"
+                    d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z" />
             </svg>
-            <span class="email-joke" style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
+            <span class="email-joke"
+                style="display: none; position: absolute; top: -30px; left: 50%; transform: translateX(-50%); background: black; color: white; padding: 5px; border-radius: 5px; white-space: nowrap;">
                 DM kiểu cổ điển 📨
             </span>
         </a>
